Fix `.offset__fixed-nav` margin on 360px wide mobile. Move shop smile tab down.
Content on Mobile devices with a width of 350px to ~400px was being cut-off by an overlaping fixed navigation bar.
A small gap was also appearing between the shop-smile widget and it's orange tab.

--- a/assets/scss/2-modules/_shop-smile.scss
+++ b/assets/scss/2-modules/_shop-smile.scss
@@ -123,7 +123,7 @@
   padding: 10px;
   position: absolute;
   right: 5px;
-  top: -55px;
+  top: -54px;
   z-index: 10001;
 }
 
